# sphinx-subprojecttoctree

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst  installation.rst  userguide.rst
subprojecttoctree/: __init__.py  __version__.py  builders.py  toctree.py  utils.py
test/: conftest.py  test_subprojecttoctree.py
test/roots/test-subprojecttoctree-master/: conf.py  index.rst
test/roots/test-subprojecttoctree-master-entry-after-subproject/: conf.py  index.rst
test/roots/test-subprojecttoctree-master-with-regular-http-url/: conf.py  index.rst
test/roots/test-subprojecttoctree-subproject/: index.rst
test/roots/test-subprojecttoctree-subproject-directive/: index.rst
test/roots/test-subprojecttoctree-subproject-multiple-toctrees/: conf.py  index.rst
test/roots/test-subprojecttoctree-subproject-nested/: conf.py  index.rst
