[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2", "setuptools_scm_git_archive"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "subprojecttoctree/__version__.py"


[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
exclude = '''
(
  \.egg
  | \.git
  | \.venv
  | build
  | dist
  | \.tox
  | subprojecttoctree/__version__.py
)
'''
