[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    env,
    docs/build/

[metadata]
name = sphinx-subprojecttoctree
author_email = dries.schaumont@ilvo.vlaanderen.be
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
setup_requires = 
    setuptools-scm
    setuptools_scm_git_archive
install_requires =
    sphinx ~= 4.4.0
packages = 
    subprojecttoctree