[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    .tox,
    build/,
    dist/,
    env,
    docs/build/
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[metadata]
name = sphinx-subprojecttoctree
author = Dries Schaumont
author_email = dries.schaumont@ilvo.vlaanderen.be
url = https://sphinx-subprojecttoctree.readthedocs.io
description = Subprojecttoctrees is a Sphinx extension that aims to facilitate the integration of several documentation sources into a single Read the Docs webpage.
project_urls =
    Changelog = https://sphinx-subprojecttoctree.readthedocs.io/en/latest/changelog.html
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Operating System :: OS Independent
    Framework :: Sphinx :: Extension
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation :: Sphinx

[options]
python_requires = >=3.8
setup_requires = 
    setuptools-scm
    setuptools_scm_git_archive
install_requires =
    sphinx ~= 4.4.0
    requests ~= 2.27.0
packages = 
    subprojecttoctree

[options.extras_require]
docs =
    sphinx~=4.4.0
    sphinx_rtd_theme~=1.0.0
    sphinx-issues~=3.0.0
dev = 
    tox
    pre-commit